<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.lr.biyou.rongyun.ui.view.UserInfoItemView
        android:id="@+id/uiv_userinfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_userfino_item_height"
        app:item_userinfo_portrait_width="@dimen/seal_mine_userfino_item_protrait"
        app:item_userinfo_portrait_height="@dimen/seal_mine_userfino_item_protrait"
        app:item_right_show="true"
        app:item_userinfo_portrait="@drawable/rc_default_portrait"
        app:item_userinfo_name="@string/seal_mine_my_account_portrait"
        app:item_userinfo_divider="true"
        >

    </com.lr.biyou.rongyun.ui.view.UserInfoItemView>


    <com.lr.biyou.rongyun.ui.view.SettingItemView
        android:id="@+id/siv_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_my_account_item_height"
        app:item_content="@string/seal_mine_my_account_nickname"
        app:item_divider="true"
        >

    </com.lr.biyou.rongyun.ui.view.SettingItemView>

    <com.lr.biyou.rongyun.ui.view.SettingItemView
        android:id="@+id/siv_saccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_my_account_item_height"
        app:item_content="@string/seal_mine_my_account_sknumber"
        app:item_divider="true"
        >

    </com.lr.biyou.rongyun.ui.view.SettingItemView>

    <com.lr.biyou.rongyun.ui.view.SettingItemView
        android:id="@+id/siv_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_mine_my_account_item_height"
        app:item_content="@string/seal_mine_my_account_phone_number"
        >

    </com.lr.biyou.rongyun.ui.view.SettingItemView>

    <com.lr.biyou.rongyun.ui.view.SettingItemView
        android:id="@+id/siv_gender"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/base_margin2"
        android:layout_height="@dimen/seal_mine_my_account_item_height"
        app:item_content="@string/seal_mine_my_account_gender"
        >

    </com.lr.biyou.rongyun.ui.view.SettingItemView>
</LinearLayout>